// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeightPopoverWidth snapshots should render HeightPopoverWidth{max} 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="max-width"
      height="12"
      name="MaxWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-width"
      height="12"
      name="AutoWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto max width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove max width
    </small>
  </div>
</DocumentFragment>
`;

exports[`HeightPopoverWidth snapshots should render HeightPopoverWidth{min} 1`] = `
<DocumentFragment>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="0"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon PopoverItem__check-icon--selected Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="min-width"
      height="12"
      name="MinWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Set to current width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="1"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="auto-width"
      height="12"
      name="AutoWidth"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Auto min width
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="2"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="percentage"
      height="12"
      name="Percentage"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Percentage
    </small>
  </div>
  <div
    class="css-1wfopar PopoverItem"
    data-test-box=""
    data-test-popover-item="3"
  >
    <div
      class="css-1jnxvbp PopoverItem__check-icon Icon Icon--neutral-1"
      data-test-icon="check"
      height="12"
      name="Check"
      width="12"
    />
    <div
      class="css-1jnxvbp PopoverItem__icon Icon Icon--neutral-1"
      data-test-icon="close"
      height="12"
      name="Close"
      width="12"
    />
    <small
      class="css-1jnxvbp PopoverItem__text Typography Typography--neutral-1 Typography--regular Typography--normal Typography--small"
      data-test-text=""
      style="text-align: inherit;"
    >
      Remove min width
    </small>
  </div>
</DocumentFragment>
`;
